examples/passing/OperatorAliasElsewhere/Def.purs
module Def where

what :: forall a b. a -> b -> a
what a _ = a
