examples/failing/OrphanInstance/Class.purs
module Class where

class C a where
  op :: a -> a
